<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="joshrod.com.madisondrinks.HelpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/help_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"/>
            <TextView
                android:id="@+id/how_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howto"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:autoLink="email"/>
            </LinearLayout>
    </ScrollView>
</LinearLayout>
